--- a/myscrumy/eskayoriadescrumy/templates/eskayoriadescrumy/home.html
+++ b/myscrumy/eskayoriadescrumy/templates/eskayoriadescrumy/home.html
@@ -2,16 +2,20 @@
 <html>
   <head>
     <style>
-      table, thead, tbody{
-        border:1px solid red;
-      }
+     table {
+       border-collapse : collapse;
+     }
+
+     table, th, td {
+       border : 1px solid red;
+     } 
     </style>
   </head>
   <body>
 
-   <table> 
+   <table border="1"> 
      <thead>
-      <tr>
+       <tr>
         <th>
           User
         </th>
@@ -27,33 +31,73 @@
         <th>
           Done Goals
         </th>
-      </tr>
+       </tr>
     </thead>
     <tbody>
+      {% if scrumy_goals is not None %}
+      {% if users is not None %}
+      {% for user in users %}
+      {% if user.rname.all is None and user.scrumygoals_set.all is not None %}
+      {% for goal in user.scrumygoals_set.all %}
+      
       <tr>
-        <td>{{ user.first_name }}</td>
-        {% if 'Weekly' in goal_status.status_name %} 
-        <td>{{ goal_name }} {{ goal_id }} </td>
-        {% else %}
-        <td>----</td>
+        <td> {{ user.username }} </td>
+        <td>
+        {% if goal in weekly_goals %}
+        {{ goal.goal_name }} {{ goal.goal_id }}
         {% endif %}
-        {% if 'Daily' in goal_status.status_name %}
-        <td> {{ goal_name }} {{ goal_id }} </td>
-       	{% else %}
-       	<td>----</td>
-       	{% endif %}
-        {% if 'Verify' in goal_status.status_name %}
-        <td> {{ goal_name }} {{ goal_id }} </td>
-       	{% else %}
-       	<td>----</td>
-       	{% endif %}
-        {% if 'Done' in goal_status.status_name %}
-        <td> {{ goal_name }} {{ goal_id }} </td>
-       	{% else %}
-       	<td>----</td>
-       	{% endif %}
-
+        </td>
+        <td>
+        {% if goal in daily_goals %}
+       	{{ goal.goal_name }} {{ goal.goal_id }}
+	{% endif %}
+        </td>
+        <td>
+        {% if goal in verify_goals %}
+       	{{ goal.goal_name }} {{ goal.goal_id }}
+	{% endif %}
+        </td>
+        <td>
+        {% if goal in done_goals %}
+       	{{ goal.goal_name }} {{ goal.goal_id }}
+	{% endif %}
+        </td>
       </tr>
+  
+      {% endfor %}
+      {% endif %}
+      {% if user.rname.all is not None %}
+      {% for goal in user.rname.all %}
+      <tr>
+	<td> {{ user.username }} </td>
+        <td>
+	{% if goal in weekly_goals %}
+        {{ goal.goal_name }} {{ goal.goal_id }}
+        {% endif %}
+        </td>
+	<td>
+        {% if goal in daily_goals %}
+        {{ goal.goal_name }} {{ goal.goal_id }}
+        {% endif %}
+        </td>
+	<td>
+	{% if goal in verify_goals %}
+        {{ goal.goal_name }} {{ goal.goal_id }}
+        {% endif %}
+        </td>
+       	<td>
+        {% if goal in done_goals %}
+        {{ goal.goal_name }} {{ goal.goal_id }}
+        {% endif %}
+        </td>
+      </tr>
+
+      {% endfor %}
+      {% endif %}
+      
+      {% endfor %}
+      {% endif %}
+      {% endif %}
     </tbody>
    </table>
   </body>
