lab 18 tested OK (Labs for Submitting and Displaying Form Results)

--- a/myscrumy/eskayoriadescrumy/templates/eskayoriadescrumy/home.html
+++ b/myscrumy/eskayoriadescrumy/templates/eskayoriadescrumy/home.html
@@ -14,6 +14,7 @@
       </style>
    </head>
    <body>
+    <a href="{% url 'eskayoriadescrumy:addgoal' %}"> add goal</a>
       <table>
        <thead>
          <tr>
