--- a/django-eskayoriadescrumy/eskayoriadescrumy/templates/eskayoriadescrumy/home.html
+++ b/django-eskayoriadescrumy/eskayoriadescrumy/templates/eskayoriadescrumy/home.html
@@ -14,6 +14,7 @@
       </style>
    </head>
    <body>
+    <a href="{% url 'eskayoriadescrumy:addgoal' %}"> add goal</a>
       <table>
        <thead>
          <tr>
